# foxglove-protos

./: .gitmodules  Cargo.toml  README.md  build.rs  flake.nix
proto/foxglove/: ImageAnnotations.proto  LocationFix.proto
src/: lib.rs
