[package]
name = "foxglove-protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"

[build-dependencies]
anyhow = "1.0.86"
glob = "0.3.1"
prost-build = "0.12.6"
